apps/cert-manager/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: milenkom-k8s-com-virtualservice
  namespace: istio-system
spec:
  hosts:
  - "milenkom-k8s.com"
  - "www.milenkom-k8s.com"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /.well-known/acme-challenge/
    route:
    - destination:
        host: istio-ingressgateway.istio-system.svc.cluster.local
        port:
          number: 80
